# hyq-rbprm

./: .git-blame-ignore-revs  .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  pyproject.toml
data/com_inequalities/: lfleg_com.ineq  lhleg_com.ineq  obj_to_constraints.py  rfleg_com.ineq  rhleg_com.ineq
data/meshes/: hyq_visual.dae
data/urdf/: hyq_lfleg_rom.urdf
hyq_rbprm/: hyq.py  hyq_abstract.py  hyq_contact6D.py
script/: admissibleComPositionsFromEffector.py  generateROMs.py  hyq_data.py
