[build-system]
build-backend = "cmeel.build"
requires = [
  "cmeel[build]",
  "example-robot-data[build]"
]

[project]
dependencies = [
  "cmeel-boost ~= 1.83.0",
  "example-robot-data"
]
description = "Utility classes for testing (robust) equilibrium of a system in contact with the environment, and other centroidal dynamics methods."
license = "BSD-2-Clause"
name = "hyq-rbprm"
version = "5.0.0"

[tool.cmeel]
has-binaries = false

[tool.isort]
profile = "black"
